--- a/JEFFRIN JOY/1-html/index.html
+++ b/JEFFRIN JOY/1-html/index.html
@@ -12,30 +12,30 @@
             <ol>
         
                 <li>
-                    <a href="https://www.youtube.com">youtube</a>
+                    <a href="https://www.youtube.com" style="color: aqua;">youtube</a>
                 </li>
                 <li>
-                    <a href="https://www.google.com">Google</a>
+                    <a href="https://www.google.com" style="color: aqua;">Google</a>
                 </li>
                 <li>
-                    <a href="https://github.com">github</a>
+                    <a href="https://github.com" style="color: aqua;">github</a>
                 </li>
             </ol>
-            <br><br>
-            <p><h1>WELCOME TO THE EMPIRE OF ANIME</h1>
-            <h2>SOME OF THE GOD TIER ANIME CHARACTERS</h2></p>
-            <ol type="1">
-                <li><h3>LEGEND OF THE NORTHERN BLADE:- "JIN"</h3><img src="images/3272f34648fa60a499721d2d697d159a.jpg" alt="anime"><img src="images/63Nsj.oq1b-small-The-Legend-of-the-Northern-.jpg" alt="anime"> </li><br>
-                <li><h3>BLEACH :- "AIZEN"</h3><img src="images/aizen.jpg" alt="anime"><img src="" alt=""><img src="images/17ebe21a52ed4c14d2e928c3fcfe66f4.jpg" alt="anime"></li><br><br><br><br>
-                <li><h3>BLEACH : "RETSU" </h3><img src="images/459e9ec2f4781c5b70f381a7341d46f2.jpg" alt="anime"><img src="images/09df9d7cabe5d8ff25f17d2345a4bf45.jpg" alt="anime"></li><br><br>
-                <li><h3>NARUTO : - "ITACHI"</h3><img src="images/itachi-sharingan-birds-hvno48jfabxzqxgm.jpg" alt="anime"><img src="images/zascudsfifh81.jpg" alt="anime"></li>
+            <br><br><br><br>
+            <p><u><h1 style="color: chartreuse;">WELCOME TO THE EMPIRE OF ANIME</h1>
+            <h2 style="color: chartreuse;">SOME OF THE GOD TIER ANIME CHARACTERS</h2></u></p>
+            <ol type="1"><br><br><br><br>
+                <li><h3 style="color: aquamarine;">LEGEND OF THE NORTHERN BLADE:- "JIN"</h3><img src="images/3272f34648fa60a499721d2d697d159a.jpg" alt="anime"><img src="images/63Nsj.oq1b-small-The-Legend-of-the-Northern-.jpg" alt="anime"> </li><br>
+                <li><h3 style="color: aquamarine;">BLEACH :- "AIZEN"</h3><img src="images/aizen.jpg" alt="anime"><img src="images/17ebe21a52ed4c14d2e928c3fcfe66f4.jpg" alt="anime"></li><br><br><br><br>
+                <li><h3 style="color: aquamarine;">BLEACH : "RETSU" </h3><img src="images/459e9ec2f4781c5b70f381a7341d46f2.jpg" alt="anime"><img src="images/09df9d7cabe5d8ff25f17d2345a4bf45.jpg" alt="anime"></li><br><br>
+                <li><h3 style="color: aquamarine;">NARUTO : - "ITACHI"</h3><img src="images/itachi-sharingan-birds-hvno48jfabxzqxgm.jpg" alt="anime"><img src="images/zascudsfifh81.jpg" alt="anime"></li>
             </ol>
         </nav>
     </header>
-    <h1>Welcome to the world of wonders</h1>
-    <h2>Its Begining......</h2>
-    <h3>The time has come... </h3>
-    <p id="para1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe id explicabo adipisci nemo maiores reiciendis. Excepturi enim temporibus voluptatibus veritatis facilis amet placeat id quam magni. Molestiae ipsa distinctio perspiciatis?</p>
-    <p id="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repellendus atque numquam ad. Perferendis recusandae reprehenderit quas unde. Nihil omnis laboriosam ullam nesciunt porro quia temporibus nobis harum possimus voluptate!</p>
+    <h1 style="color: chartreuse;">Welcome to the world of wonders</h1>
+    <h2 style="color: chartreuse;">Its Begining......</h2>
+    <h3 style="color: chartreuse;">The time has come... </h3>
+    <p id="para1" style="color: cornflowerblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, in impedit officia incidunt, sapiente magni tempora animi hic, ipsum deleniti possimus quam dolores perspiciatis nesciunt error quo quidem consequuntur mollitia?</p>
+    <p id="para2" style="color: cornflowerblue;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos alias incidunt sunt atque, qui odit molestiae. Maiores veniam autem quas illo eveniet, saepe perferendis quod alias at quia labore debitis!</p>
 </body>
 </html>
