--- a/JEFFRIN JOY/1-html/index.html
+++ b/JEFFRIN JOY/1-html/index.html
@@ -10,6 +10,9 @@
     <header>
         <nav>
             <ol>
+                <li>
+                 <u> <a href="https://comick.io/" style="color: aqua;">Comick </a></u>
+                </li>
         
                 <li>
                     <a href="https://www.youtube.com" style="color: aqua;">youtube</a>
